--- a/main.ipynb
+++ b/main.ipynb
@@ -88,7 +88,7 @@
    "id": "b5f75d0d-2c03-49ce-8223-6e30e4f92c60",
    "metadata": {},
    "source": [
-    "p_input = PannsInput().add_from_file(r'./panns_utils/audios/0125-learn_to_whistle_loud.wav')",
+    "p_input = PannsInput().add_from_file(r'./panns_utils/audios/0125-learn_to_whistle_loud.wav')"
    ]
   },
   {
